--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
+.container{
+   display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.form{
+  height: 80vh;
+  width: 25vw;
+  display: flex;
+  flex-direction: column;  
+  border-radius: 20px;
+  padding: 1rem 3rem;
+  box-shadow: 5px 5px 10px rgb(209, 208, 208);
+}
+
+.label{
+  padding-top: 2rem;
+}
+
+.card-container{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card{
   display: flex;
   flex-direction: column;
+  text-transform: capitalize;
+  min-height: 16vh;
+  width: 20vw;
+  text-align: center;
+  margin: 20px 0px;  
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px rgb(209, 208, 208);
+
+}
+
+.card-header{
   align-items: center;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 7vh;
+  border-radius: 10px 10px 0 0;
+  background-color: rgb(155, 247, 242);
 }
 
-.App-link {
-  color: #61dafb;
+.card-body{
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn{
+  margin: 15px 5px;
 }
+
+.feedback{
+  margin-top: 3rem;
+}
+
+input, select ,textarea {
+  font-size: 18px;
+}
+
